--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ django-filter = "^21.1"
 django-allauth = "^0.47.0"
 djangorestframework-simplejwt = "^5.0.0"
 PyYAML = "^6.0"
+django-vite = "^1.3.0"
 
 [tool.poetry.dev-dependencies]
 django-stubs = "^1.9.0"
