--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ django-allauth = "^0.47.0"
 djangorestframework-simplejwt = "^5.0.0"
 PyYAML = "^6.0"
 django-vite = "^1.3.0"
+gunicorn = "^20.1.0"
+gevent = "^21.12.0"
 
 [tool.poetry.dev-dependencies]
 django-stubs = "^1.9.0"
