--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,22 @@
 asgiref==3.5.0; python_version >= "3.8"
 backports.zoneinfo==0.2.1; python_version < "3.9" and python_version >= "3.8"
 certifi==2021.10.8; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0"
-cffi==1.15.0; python_version >= "3.6"
+cffi==1.15.0; platform_python_implementation == "CPython" and sys_platform == "win32" and (python_version >= "2.7" and python_full_version < "3.0.0" or python_version > "3.5") and python_version >= "3.6"
 charset-normalizer==2.0.10; python_full_version >= "3.6.0" and python_version >= "3"
 cryptography==36.0.1; python_version >= "3.6"
 defusedxml==0.7.1; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
 django-allauth==0.47.0
 django-filter==21.1; python_version >= "3.6"
+django-vite==1.3.0
 django==4.0.1; python_version >= "3.8"
 djangorestframework-simplejwt==5.0.0; python_version >= "3.7"
 djangorestframework==3.13.1; python_version >= "3.6"
+gevent==21.12.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_version > "3.5")
+greenlet==1.1.2; python_version >= "2.7" and python_full_version < "3.0.0" and platform_python_implementation == "CPython" or python_version > "3.5" and python_full_version < "3.0.0" and platform_python_implementation == "CPython" or python_version > "3.5" and platform_python_implementation == "CPython" and python_full_version >= "3.5.0"
+gunicorn==20.1.0; python_version >= "3.5"
 idna==3.3; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.5"
 oauthlib==3.1.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
-pycparser==2.21; python_version >= "3.6" and python_full_version < "3.0.0" or python_version >= "3.6" and python_full_version >= "3.4.0"
+pycparser==2.21; python_version >= "2.7" and python_full_version < "3.0.0" and platform_python_implementation == "CPython" and sys_platform == "win32" and (python_version >= "2.7" and python_full_version < "3.0.0" or python_version > "3.5") or platform_python_implementation == "CPython" and sys_platform == "win32" and (python_version >= "2.7" and python_full_version < "3.0.0" or python_version > "3.5") and python_full_version >= "3.4.0"
 pyjwt==2.3.0; python_version >= "3.7"
 python3-openid==3.2.0
 pytz==2021.3; python_version >= "3.7"
@@ -22,3 +26,5 @@ requests==2.27.1; python_version >= "2.7" and python_full_version < "3.0.0" or p
 sqlparse==0.4.2; python_version >= "3.8"
 tzdata==2021.5; sys_platform == "win32" and python_version >= "3.8"
 urllib3==1.26.8; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version < "4"
+zope.event==4.5.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_version > "3.5"
+zope.interface==5.4.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_version > "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version > "3.5"
