settings by environment

--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,6 @@ GOOGLE_SECRET=secret
 GITHUB_CLIENT_ID=client_id
 GITHUB_SECRET=secret
 
-SECRET_KEY=secret_django_key
+SECRET_KEY=django_secret
+DJANGO_SETTINGS_MODULE=djangauth.settings.develop
+DEBUG=True
